# vk

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: add_shader.cmake
docs/uml/: .$general.drawio.bkp  .$general.drawio.dtmp  general.drawio
resources/shaders/: build.bat  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
resources/shaders/blur/: horizontal.frag  horizontal.vert  vertical.frag
resources/shaders/combine/: shader.frag
resources/shaders/emiter/: shader.frag  shader.vert
resources/shaders/main/: shader.frag
resources/shaders/pick_bright/: shader.frag
resources/shaders/post/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
resources/shaders/shadow/: shader.frag  shader.vert
resources/shaders/skybox/: shader.frag  shader.vert
resources/shaders/test/: shader.frag  shader.vert
sources/: load_file.hpp  main.cpp
sources/graphics/vulkan/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  config.hpp  context.cpp  context.hpp  descriptor_pool.cpp  device.cpp  device.hpp  locator.cpp  locator.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  offscreen_pass.cpp  offscreen_pass.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  swapchain_pass.cpp  swapchain_pass.hpp  texture.cpp  texture.hpp  types.cpp  types.hpp  uniform_buffer.hpp
sources/graphics/vulkan/context/: context.cpp  context.hpp  device.cpp  device.hpp  swapchain.cpp  swapchain.hpp
sources/graphics/vulkan/descriptor/: descriptor_pool.cpp  descriptor_pool.hpp  descriptor_pool_props.hpp
sources/graphics/vulkan/image/: cubemap_texture.cpp  cubemap_texture.hpp  image_texture.cpp  image_texture.hpp  image_view.hpp  render_texture.cpp  render_texture.hpp  sampler.hpp  swapchain_image.cpp  swapchain_image.hpp  texture.hpp
sources/graphics/vulkan/render_pass/: framebuffer.cpp  framebuffer.hpp  framebuffer_props.hpp  offscreen_framebuffer.cpp  offscreen_framebuffer.hpp  offscreen_pass.cpp  offscreen_pass.hpp  render_pass.hpp  swapchain_framebuffer.cpp  swapchain_framebuffer.hpp  swapchain_pass.cpp  swapchain_pass.hpp
sources/renderer/: buffer.cpp  camera.cpp  camera.hpp  config.hpp  context.cpp  context.hpp  descriptor_pool.cpp  descriptor_pool.hpp  device.cpp  device.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  offscreen_pass.cpp  offscreen_pass.hpp  pipeline.cpp  pipeline.hpp  render_pass.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  swapchain_pass.cpp  swapchain_pass.hpp  texture.cpp  texture.hpp  types.cpp  types.hpp  uniform_buffer.hpp
sources/window/: glfw_window.cpp  glfw_window.hpp  input.cpp  input.hpp  window.cpp  window.hpp
